<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.drawer.classes.addClass.AddClassFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:background="@color/white"
            android:elevation="10dp"
            android:maxWidth="600dp"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="10dp"
            android:layout_marginTop="50dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/mat_white"
                android:orientation="vertical"
                android:paddingHorizontal="15dp"
                android:paddingVertical="25dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/add_class"
                    android:textColor="@color/dark_green"
                    android:textSize="40sp"
                    android:typeface="serif" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="30dp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_email_edit_text_field"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    app:boxBackgroundColor="#A4438E68"
                    app:boxStrokeColor="@color/white"
                    app:boxStrokeWidth="2dp"
                    app:hintTextColor="@color/black"
                    app:startIconDrawable="@drawable/baseline_menu_book_24">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/class_name_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/class_name"
                        android:inputType="text" />
                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_class_add_button"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_gravity="bottom|center_horizontal"
            android:layout_marginHorizontal="10dp"
            android:backgroundTint="@color/light_red"
            android:clickable="true"
            android:paddingHorizontal="30dp"
            android:layout_marginBottom="50dp"
            android:text="@string/add"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:cornerRadius="30dp"
            app:icon="@drawable/baseline_add_circle_24"
            app:iconGravity="start"
            app:iconTintMode="multiply"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>